messaging_app/green_deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-green
  labels:
    app: django-messaging
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-messaging
      version: green
  template:
    metadata:
      labels:
        app: django-messaging
        version: green
    spec:
      containers:
        - name: django-messaging-app
          image: django-messaging-app:green # updated image tag
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
